Fixing font family, size and spacing

--- a/_assets/css/index.scss
+++ b/_assets/css/index.scss
@@ -190,3 +190,7 @@ a.text-icsp-blue {
     text-decoration: underline;
   }
 }
+
+.margin-bottom-quarter {
+  margin-bottom: 0.25rem;
+}
